--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "libreoffice-convert": "^1.6.0",
     "@azure/identity": "^4.5.0",
     "@azure/msal-node": "^2.15.0",
     "@google-cloud/storage": "^7.12.1",
     "@google-cloud/vision": "^4.3.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "ansis": "^3.3.2",
+    "axios": "^1.7.7",
     "camelcase": "^8.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "fs-extra": "^11.2.0",
     "googleapis": "^144.0.0",
+    "libreoffice-convert": "^1.6.0",
     "node-cron": "^3.0.3",
     "node-poppler": "^7.2.2",
     "openai": "^4.67.1",
@@ -33,6 +37,7 @@
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/fs-extra": "^11.0.4"
   }
