--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs-extra": "^11.2.0",
     "googleapis": "^144.0.0",
     "libreoffice-convert": "^1.6.0",
+    "mysql2": "^3.11.4",
     "node-cron": "^3.0.3",
     "node-poppler": "^7.2.2",
     "openai": "^4.67.1",
