--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ansis": "^3.3.2",
     "axios": "^1.7.7",
     "camelcase": "^8.0.0",
+    "chalk": "^5.3.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
