--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google-cloud/storage": "^7.12.1",
     "@google-cloud/vision": "^4.3.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@types/lodash": "^4.17.13",
     "ansis": "^3.3.2",
     "axios": "^1.7.7",
     "camelcase": "^8.0.0",
@@ -27,6 +28,7 @@
     "fs-extra": "^11.2.0",
     "googleapis": "^144.0.0",
     "libreoffice-convert": "^1.6.0",
+    "lodash": "^4.17.21",
     "mongodb": "^6.10.0",
     "mysql2": "^3.11.4",
     "node-cron": "^3.0.3",
