--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "openai": "^4.76.1",
     "pnpm": "^9.11.0",
     "sharp": "^0.33.5",
+    "string-similarity": "^4.0.4",
     "tsx": "^4.19.1",
     "winston": "^3.14.2",
     "zod": "^3.23.8",
