--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "fs-extra": "^11.2.0",
+    "fuzzyset.js": "^1.0.7",
     "googleapis": "^144.0.0",
     "libreoffice-convert": "^1.6.0",
     "lodash": "^4.17.21",
