changed file names

--- a/.gitignore
+++ b/.gitignore
@@ -140,5 +140,7 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-reference_json/
-test_pdfs/
+# test folders
+reference-json/
+test-pdfs/
+__tests__/config.json
