--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
     "@types/lodash": "^4.17.13",
     "ansis": "^3.3.2",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "camelcase": "^8.0.0",
     "chalk": "^5.3.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "fs-extra": "^11.2.0",
     "fuzzyset.js": "^1.0.7",
     "googleapis": "^144.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "libreoffice-convert": "^1.6.0",
     "lodash": "^4.17.21",
     "mongodb": "^6.10.0",
