--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
+    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/express": "^5.0.0",
     "@types/fs-extra": "^11.0.4"
   }
