--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "tsx index.ts"
+    "start": "tsx index.ts",
+    "test": "vitest --config vitest.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "fs-extra": "^11.2.0",
+
     "fuzzyset.js": "^1.0.7",
     "googleapis": "^144.0.0",
     "libreoffice-convert": "^1.6.0",
@@ -45,6 +47,8 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "@types/fs-extra": "^11.0.4"
+    "@types/fs-extra": "^11.0.4",
+    "vitest": "^3.0.7"
+
   }
 }
