--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
       "declaration": true,
       "allowImportingTsExtensions": true,
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "__tests__/**/*.ts"],
     "exclude": ["node_modules"]
   }
