--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@azure/identity": "^4.5.0",
-    "@azure/msal-node": "^2.15.0",
+    "@azure/msal-node": "^2.16.2",
     "@google-cloud/storage": "^7.12.1",
     "@google-cloud/vision": "^4.3.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/express": "^5.0.0",
-    "@types/fs-extra": "^11.0.4"
+    "@types/fs-extra": "^11.0.4",
+    "@types/node-cron": "^3.0.11"
   }
 }
