--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/fs-extra": "^11.0.4",
-    "vitest": "^3.0.7"
-    "@microsoft/microsoft-graph-types": "^2.40.0",
+    "vitest": "^3.0.7",
+    "@microsoft/microsoft-graph-types": "^2.40.0"
   }
 }
