Chat bot2.0 unit tests (#22)
* ocr

* new json schema that fits db schema

* minor fix

* new code structure and some prompt improvements

* minor fix

* sql-router

* mongoDb

* sql-translator ready to be adjusted to euvic

* meta endpoint code

* dockerfile

* minor fix

* minor code fix

* minor fix

* error handling

* minor fix

* minor fix

* error fix

* fixxx

* fix

* stringify

* logger

* fix

* fix

* loggers

* fix

* fix

* logger

* final fix

* new dbSchema

* some code improvement

* prompts as envs

* first chat history implementation

* fix

* log

* fixxxx

* minor fix

* logger

* logger and fix

* reverse

* logger

* maybe fix

* inserting sqlQuery into chat history

* some improvement

* Json to db (#1)

* poaczatek wkladania danych do bazy

* przed robienie porządku

* zrobienie porządku zadbanie o bezpiećzeństwo przed rozwaleniem BD

* zmodyfikwoany promt oraz zmodyfikowana struktura json

* wstepna popraw kodu do dowania danych do BD

* upgarde modelów

* poprawki kodowe, nowe pliki json-generowanie

* poprawka kod i jsona Manufactroing

---------

Co-authored-by: Grzesiek1212 <grzegorz.prasek3@gmail.com>

* pnpm fix

* shit

* chat history reset

* status

* fix

* poprawanie promta w kontekście poprawy jakości danych

* new tables and file links

* duplicate message fix

* maybe fix

* fixx

* Biznes cases changed (#4)

* poprawanie promta w kontekście poprawy jakości danych

* modyfikacja moedlu danych oraz promta

* dodanie porpawnego odczytu danych

* dodanie rzeczy do bazy danych

* poprawki

---------

Co-authored-by: Grzesiek1212 <grzegorz.prasek3@gmail.com>

* new try catch

* maybe fix

* kurwa prosze

* error sending message handling

* file rename

* file delete

* type improvement

* new insertOrGetUser handling

* polishChars

* poprawki

* small changes about genrate new dataset

* add spine of the Verifier

* added verfications

* add small fixes about promts and add .env modifications

* fxies

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# test folders
+__tests__/data
+__tests__/config
+__tests__/ignore
+/test-results.json
