--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "openai": "^4.76.1",
     "pnpm": "^9.11.0",
     "sharp": "^0.33.5",
-
     "string-similarity": "^4.0.4",
     "tsx": "^4.19.1",
     "winston": "^3.14.2",
@@ -48,9 +47,10 @@
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
+    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/express": "^5.0.0",
     "@types/fs-extra": "^11.0.4",
-    "vitest": "^3.0.7",
-    "@microsoft/microsoft-graph-types": "^2.40.0"
+    "@types/fuzzyset.js": "^0.0.5",
+    "vitest": "^3.0.7"
   }
 }
